--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
+        "@vitejs/plugin-vue": "^6.0.2",
+        "autoprefixer": "^10.4.22",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "pinia": "^2.3.1",
+        "postcss": "^8.5.6",
+        "tailwindcss": "^4.1.17",
+        "vite": "^5.0.0",
+        "vue": "^3.5.25",
+        "vue-router": "^4.6.3"
     }
 }
